# flask-template

./: README.md  pyproject.toml  run.py
flask_template/: __init__.py  app.py
main/: __init__.py  app.py
main/routes/: __init__.py
tests/: test_app.py
