[tool.poetry]
name = "flask-template"
version = "0.1.0"
description = "A simple flask template"
authors = ["Hemant Verma <fameoflight@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.1.0"
flask-cors = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"